# wwwo

./: .dockerignore  .fetch.json  .gitignore  .k  Dockerfile  GNUmakefile  Main.ml  Makefile  Makefile.old  README.md  gen.ml  generate  github-activity.py  meta.mk  projects.json  projects.md  rebuild.sh  requirements.txt  sounds.py  style.css  utils.ml  validate.sh
.github/: aws.config.template  docker-build  ecr-login  invoke-lambda  local  reconfigure-lambda
.github/workflows/: build.yaml  docker.yaml  publish.yaml
content/: projects.json
content/css/: bor19.css  coqdoc.css  gallery.css  post.css  practice.css  sounds.css  style.css  twitch.css
content/error/: 404.html
content/image/: Makefile  bind01-spine.dot  bind01.dot
content/js/: practice.js
content/post/: 2017-05-07-scala-implicits-and-curry-howard.md  2017-05-30-a-small-nanopass-example.md  2017-06-08-implementing-a-k-like-language-targeting-malfunction.md  2017-08-31-combining-brick-and-haskeline.md  guarded-memory-calculations-using-coq.md  the-journey.md
content/snippet/: academic.md  projects.md
doc/: Makefile  README.in.md  hello.ml  html.mli
generator/: .gitignore  Makefile  deps  deps.dev
generator/src/: .gitignore  Makefile  activity.ml  common.ml  env.ml  gallery.atd  gen.ml  gen_post.ml  git_activity.atd  github.atd  hello.ml  html.ml  html.mli  lenient_iso8601.ml  page.ml  path.ml  post.ml  project.atd  resume.atd  sounds.atd  strict_iso8601.ml  twitch.atd  utils.ml
lambda/: Makefile  Pipfile  pyproject.toml  setup.cfg
lambda/src/Lambda/: cli.py  harness.py  main.py  util.py
lambda/src/lambda/: cli.py  util.py
meta/: Pipfile  pyproject.toml  setup.cfg
meta/src/meta/tasks/: github-activity.py  github.py  list.py  project.py  projects.py  sounds.py  twitch.py
src/: .gitignore  Makefile  deps  gallery.atd  gen.ml  html.ml  lenient_iso8601.ml  practice.atd  practice.js  project.atd  sounds.atd  twitch.atd  utils.ml
tasks/: Pipfile  pyproject.toml
tasks/src/tasks/: __init__.py  cli.py  common.py  gallery.py  git_activity.py  github.py  list.py  project.py  projects.py  purge.py  resume.py  sounds.py  sourcehut.py  twitch.py  upload.py  util.py
