[build-system]
requires = ["setuptools >= 75.2.0, < 76"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda"
version = "0.0.1"
dependencies = [
  "awslambdaric >= 2.2.1, < 3",
  "boto3 >= 1.35.50, < 2",
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.scripts]
wwwo-lambda = "Lambda.harness:run"
