[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meta"
version = "0.0.1"
dependencies = [ "boto3 >= 1.28.57, < 1.29", "PyGithub >= 2.1.1, < 2.2", ]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.scripts]
wwwo-github = "meta.tasks.github:main"
wwwo-list = "meta.tasks.list:main"
wwwo-project = "meta.tasks.project:main"
wwwo-projects = "meta.tasks.projects:main"
wwwo-sounds = "meta.tasks.sounds:main"
wwwo-twitch = "meta.tasks.twitch:main"
