[metadata]
name = meta
version = 0.0.1

[options]
packages = find_namespace:
package_dir =
    = src

install_requires =
  boto3 >= 1.28.57, < 1.29
  PyGithub >= 2.1.1, < 2.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  wwwo-github = meta.tasks.github:main
  wwwo-list = meta.tasks.list:main
  wwwo-project = meta.tasks.project:main
  wwwo-projects = meta.tasks.projects:main
  wwwo-sounds = meta.tasks.sounds:main
  wwwo-twitch = meta.tasks.twitch:main
