[build-system]
requires = ["setuptools >= 75.2.0, < 76"]
build-backend = "setuptools.build_meta"

[project]
name = "tasks"
version = "0.0.1"
dependencies = [
  "boto3 >= 1.35.50, < 2",
  "PyGithub >= 2.4.0, < 3",
  "python-magic >= 0.4.27, < 0.5",
  "requests >= 2.32.3, < 3",
  "PyYAML >= 6.0.2, < 7",
  "pytz >= 2024.2",
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.scripts]
wwwo-gallery = "tasks.gallery:main"
wwwo-project = "tasks.project:main"
wwwo-projects = "tasks.projects:main"
wwwo-sounds = "tasks.sounds:main"
wwwo-twitch = "tasks.twitch:main"
wwwo-upload = "tasks.upload:main"
wwwo-purge = "tasks.purge:main"
wwwo-resume = "tasks.resume:main"
wwwo-git-activity = "tasks.git_activity:main"
